docs-archive/apache-airflow-providers-pagerduty/5.1.0/_sources/_api/airflow/providers/pagerduty/hooks/pagerduty_events/index.rst.txt
airflow.providers.pagerduty.hooks.pagerduty_events
==================================================

.. py:module:: airflow.providers.pagerduty.hooks.pagerduty_events

.. autoapi-nested-parse::

   Hook for sending or receiving data from PagerDuty as well as creating PagerDuty incidents.



Classes
-------

.. autoapisummary::

   airflow.providers.pagerduty.hooks.pagerduty_events.PagerdutyEventsHook
   airflow.providers.pagerduty.hooks.pagerduty_events.PagerdutyEventsAsyncHook


Functions
---------

.. autoapisummary::

   airflow.providers.pagerduty.hooks.pagerduty_events.prepare_event_data


Module Contents
---------------

.. py:function:: prepare_event_data(summary, severity, source = 'airflow', custom_details = None, component = None, group = None, class_type = None, action = 'trigger', dedup_key = None, images = None, links = None, action_key_name = 'action')

   Prepare event data for send_event / post('/v2/enqueue') method.


.. py:class:: PagerdutyEventsHook(integration_key = None, pagerduty_events_conn_id = None)

   Bases: :py:obj:`airflow.providers.pagerduty.version_compat.BaseHook`


   This class can be used to interact with the Pagerduty Events API.

   It takes both an Events API token and a PagerDuty connection with the Events API token
    (i.e. Integration key) as the password/Pagerduty API token. If both supplied, the token will be used.

   :param integration_key: PagerDuty Events API token
   :param pagerduty_events_conn_id: connection that has PagerDuty integration key in the Pagerduty
    API token field


   .. py:attribute:: conn_name_attr
      :value: 'pagerduty_events_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'pagerduty_events_default'



   .. py:attribute:: conn_type
      :value: 'pagerduty_events'



   .. py:attribute:: hook_name
      :value: 'Pagerduty Events'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom field behaviour.



   .. py:attribute:: integration_key
      :value: ''



   .. py:method:: send_event(summary, severity, source = 'airflow', action = 'trigger', dedup_key = None, custom_details = None, group = None, component = None, class_type = None, images = None, links = None)

      Create event for service integration.

      :param summary: Summary for the event
      :param severity: Severity for the event, needs to be one of: info, warning, error, critical
      :param source: Specific human-readable unique identifier, such as a
          hostname, for the system having the problem.
      :param action: Event action, needs to be one of: trigger, acknowledge,
          resolve. Default to trigger if not specified.
      :param dedup_key: A string which identifies the alert triggered for the given event.
          Required for the actions acknowledge and resolve.
      :param custom_details: Free-form details from the event. Can be a dictionary or a string.
          If a dictionary is passed it will show up in PagerDuty as a table.
      :param group: A cluster or grouping of sources. For example, sources
          "prod-datapipe-02" and "prod-datapipe-03" might both be part of "prod-datapipe"
      :param component: The part or component of the affected system that is broken.
      :param class_type: The class/type of the event.
      :param images: List of images to include. Each dictionary in the list accepts the following keys:
          `src`: The source (URL) of the image being attached to the incident. This image must be served via
          HTTPS.
          `href`: [Optional] URL to make the image a clickable link.
          `alt`: [Optional] Alternative text for the image.
      :param links: List of links to include. Each dictionary in the list accepts the following keys:
          `href`: URL of the link to be attached.
          `text`: [Optional] Plain text that describes the purpose of the link, and can be used as the
          link's text.
      :return: PagerDuty Events API v2 response.



   .. py:method:: create_change_event(summary, source = 'airflow', custom_details = None, timestamp = None, links = None)

      Create change event for service integration.

      :param summary: Summary for the event
      :param source: Specific human-readable unique identifier, such as a
          hostname, for the system having the problem.
      :param custom_details: Free-form details from the event. Can be a dictionary or a string.
          If a dictionary is passed it will show up in PagerDuty as a table.
      :param timestamp: The time at which the emitting tool detected or generated the event.
      :param links: List of links to include. Each dictionary in the list accepts the following keys:
          `href`: URL of the link to be attached.
          `text`: [Optional] Plain text that describes the purpose of the link, and can be used as the
          link's text.
      :return: PagerDuty Change Events API v2 response.



   .. py:method:: test_connection()


.. py:class:: PagerdutyEventsAsyncHook(integration_key = None, pagerduty_events_conn_id = None, api_version = 'v2')

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpAsyncHook`


   This class can be used to interact with the Pagerduty Events API via async http.

   Documentation on how to use the PagerDuty Events API can be found at:
       https://developer.pagerduty.com/docs/events-api-v2-overview

   It takes both an Events API token and a PagerDuty connection with the Events API token
    (i.e. Integration key) as the password/Pagerduty API token. If both supplied, the token will be used.

   :param integration_key: PagerDuty Events API token
   :param pagerduty_events_conn_id: connection that has PagerDuty integration key in the Pagerduty
    API token field
   :param api_version: api version to use


   .. py:attribute:: default_headers


   .. py:attribute:: conn_name_attr
      :value: 'pagerduty_events_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'pagerduty_events_default'



   .. py:attribute:: conn_type
      :value: 'pagerduty_events'



   .. py:attribute:: hook_name
      :value: 'Async Pagerduty Events'



   .. py:attribute:: integration_key
      :value: None



   .. py:attribute:: pagerduty_events_conn_id
      :value: None



   .. py:attribute:: api_version
      :value: 'v2'



   .. py:attribute:: method
      :value: 'POST'



   .. py:attribute:: base_url
      :type:  str
      :value: 'https://events.pagerduty.com'



   .. py:attribute:: http_conn_id
      :value: ''



   .. py:method:: get_integration_key()
      :async:


      Get integration key from the connection.



   .. py:method:: send_event(summary, severity, source = 'airflow', action = 'trigger', dedup_key = None, custom_details = None, group = None, component = None, class_type = None, images = None, links = None)
      :async:


      Create event for service integration.

      :param summary: Summary for the event
      :param severity: Severity for the event, needs to be one of: info, warning, error, critical
      :param source: Specific human-readable unique identifier, such as a
          hostname, for the system having the problem.
      :param action: Event action, needs to be one of: trigger, acknowledge,
          resolve. Default to trigger if not specified.
      :param dedup_key: A string which identifies the alert triggered for the given event.
          Required for the actions acknowledge and resolve.
      :param custom_details: Free-form details from the event. Can be a dictionary or a string.
          If a dictionary is passed it will show up in PagerDuty as a table.
      :param group: A cluster or grouping of sources. For example, sources
          "prod-datapipe-02" and "prod-datapipe-03" might both be part of "prod-datapipe"
      :param component: The part or component of the affected system that is broken.
      :param class_type: The class/type of the event.
      :param images: List of images to include. Each dictionary in the list accepts the following keys:
          `src`: The source (URL) of the image being attached to the incident. This image must be served via
          HTTPS.
          `href`: [Optional] URL to make the image a clickable link.
          `alt`: [Optional] Alternative text for the image.
      :param links: List of links to include. Each dictionary in the list accepts the following keys:
          `href`: URL of the link to be attached.
          `text`: [Optional] Plain text that describes the purpose of the link, and can be used as the
          link's text.
      :return: PagerDuty Events API response.



